# awesome-ai-agent-security

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
attacks/: __init__.py  cli.py  memory_poisoning.py  prompt_injection.py  red_team.py  tool_abuse.py
data/: default.yaml
examples/: demo.py
research/: agent-security-papers.md  attack-playbook.md  philosophy-of-agent-security.md  security-taxonomy.md  security-theory-foundations.md  threat-landscape.md
shield/: __init__.py  cli.py  config.py  logger.py  memory_guard.py  models.py
shield/core/: __init__.py  action_shield.py  input_shield.py  memory_shield.py  soul_shield.py
shield/data/: __init__.py
shield/patterns/: __init__.py  injection.py  poison.py  suspicious.py
tests/: test_action_shield.py  test_memory_shield.py  test_red_team.py
